--- a/app/index.jade
+++ b/app/index.jade
@@ -22,6 +22,4 @@ html(lang='en', ng-app='fmCases')
           .center {{pageTitle}}
           .right
             ons-toolbar-button Label
-        ons-button(ng-click="pushPage(2)") Start FMCases
-
-
+        ons-button(ng-click="pushRoot()") Start FMCases
