--- a/app/views/content.jade
+++ b/app/views/content.jade
@@ -1,6 +1,7 @@
 include includes/topbar.jade
 
 //content page template
-.content {{pageOpt().content}}
+ons-page
+  .content {{pageOpt().content}}
 
 include includes/bottombar.jade
