--- a/app/views/includes/bottombar.html
+++ b/app/views/includes/bottombar.html
@@ -1,1 +1,1 @@
-<ons-bottom-toolbar><div style="text-align: center;" class="bottom-bar__line-height">Bottom toolbar</div></ons-bottom-toolbar>
+<ons-bottom-toolbar><div style="text-align: center;" class="bottom-bar__line-height">FMCases</div></ons-bottom-toolbar>
