--- a/app/views/includes/bottombar.jade
+++ b/app/views/includes/bottombar.jade
@@ -1,2 +1,2 @@
 ons-bottom-toolbar
-  .bottom-bar__line-height(style='text-align: center;') Bottom toolbar
+  .bottom-bar__line-height(style='text-align: center;') FMCases
