prototype is working!

--- a/app/index.jade
+++ b/app/index.jade
@@ -8,6 +8,7 @@ html(lang='en', ng-app='fmCases')
     link(rel='stylesheet', href='styles/app.css')
     link(rel='stylesheet', href='lib/onsen/css/onsenui.css')
     link(rel='stylesheet', href='lib/onsen/css/onsen-css-components.css')
+    link(rel="stylesheet", type="text/css", href="../styles/style.css")
     script(src='lib/onsen/js/angular/angular.js')
     script(src='lib/onsen/js/onsenui.js')
     script(src='js/app.js')
