--- a/app/views/includes/topbar.html
+++ b/app/views/includes/topbar.html
@@ -1,1 +1,1 @@
-<ons-toolbar><div class="left"><ons-back-button>Back</ons-back-button></div><div class="center">{{pageOpt().title}}</div></ons-toolbar>
+<ons-toolbar class="topbar"><div class="left"><ons-back-button>Back</ons-back-button></div><div class="center">{{pageOpt().title}}</div></ons-toolbar>
