--- a/app/views/includes/topbar.html
+++ b/app/views/includes/topbar.html
@@ -1,1 +1,1 @@
-<ons-toolbar class="topbar"><div class="left"><ons-back-button>Back</ons-back-button></div><div class="center">{{pageOpt().title}}</div></ons-toolbar>
+<ons-toolbar class="topbar"><div class="left"><ons-back-button>Back</ons-back-button></div><div class="center">{{pageOpt().title}}</div><div class="right"><div class="favorites"></div><div ng-click="pushRecents()" class="recents"></div><div class="search"></div></div></ons-toolbar>
