everything works with custom ng-hammer

--- a/app/views/navigation.jade
+++ b/app/views/navigation.jade
@@ -2,9 +2,7 @@ include includes/topbar.jade
 
 //navigation page template
 ons-list
-  ons-list-item(ng-repeat='item in pageOpt().items', modifier='tappable', ng-click='itemTapped(item)')
-    {{item.title}}
-    .expandable-content(ng-hide="")
-      | arstanrsteanrosietnarosntaioernstioe
+  ons-list-item(ng-repeat='item in pageOpt().items', modifier='tappable', ng-press='itemTapped(item)') {{item.title}}
+    .expandable-content(ng-show="item.showExpandable") {{item.expandableContent}}
 
 include includes/bottombar.jade
