--- a/app/index.jade
+++ b/app/index.jade
@@ -11,6 +11,7 @@ html(lang='en', ng-app='fmCases')
     link(rel="stylesheet", type="text/css", href="../styles/style.css")
     script(src='lib/onsen/js/angular/angular.js')
     script(src='lib/onsen/js/onsenui.js')
+    script(src='http://hammerjs.github.io/dist/hammer.min.js')
     script(src='https://rawgithub.com/gsklee/ngStorage/master/ngStorage.js')
     script(src='https://rawgithub.com/jashkenas/underscore/master/underscore-min.js')
     script(src='js/services.js')
