--- a/app/views/navigation.jade
+++ b/app/views/navigation.jade
@@ -2,7 +2,7 @@ include includes/topbar.jade
 
 //navigation page template
 ons-list
-  ons-list-item(ng-repeat='item in pageOpt().items', modifier='tappable', ng-press='itemTapped(item)') {{item.title}}
+  ons-list-item(ng-repeat='item in pageOpt().items', modifier='tappable', ng-tap='itemTapped(item)', ng-press='itemPressed(item)') {{item.title}}
     .expandable-content(ng-show="item.showExpandable") {{item.expandableContent}}
 
 include includes/bottombar.jade
