--- a/app/views/recents.jade
+++ b/app/views/recents.jade
@@ -1,6 +1,7 @@
 include includes/topbar.jade
 
 ons-list
-  ons-list-item(ng-repeat='item in recents()', modifier='tappable', ng-click='pushPage(item)') {{item.title}}
+  ons-list-item(ng-repeat='item in recents()', modifier='tappable', ng-tap='itemTapped(item)', ng-press='itemPressed(item)') {{item.title}}
+    .expandable-content(ng-show="item.showExpandable") {{item.expandableContent}}
 
 include includes/bottombar.jade
