--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -1,26 +1,1 @@
-.content .title, .content table { font-family: "Trebuchet MS", Helvetica, sans-serif; white-space: pre-wrap; word-wrap: break-word; }
-.content .title { font-weight: bold; font-size: 17pt;}
-.content .title-2 { margin-top: 3%; font-size: 13pt; }
-.content table { font-size: 12pt;}
-.content .row { font-size: 12pt;}
-.content .level-1, .content .level-2, .content .level-3, .content .level-4, .content table { line-height: 160%; margin-left: 8pt; font-weight: normal; }
-.content .level-1 { font-size: 13pt; margin-top: 3%; margin-left: 0pt; clear: both; }
-.content .level-1::before { content: "+\00A0 ";}
-.content .level-2 { font-size: 12pt;}
-.content .level-2::before { content: "-\00A0 ";}
-.content .level-3 { font-size: 12pt; }
-.content .level-3::before { content: '\2002\00A0\00A0';}
-.content .level-4 { font-size: 12pt; }
-.content .one-half { width: 40%; float: left; margin-left: 5%; padding-right: 2.5%; margin-right: 2.5% white-space: pre-wrap; margin-top: 4%; }
-.content .border-right { border-right: 1px solid black; }
-.content .row { width: 100%; clear: both; margin: 15pt 0pt; display: trable;}
-.content .left { float: left; text-align: right; width: 30%;}
-.content .right { float: left; width: 70%;}
-.topbar {background-color: #192832;}
-.topbar .navigation-bar__title {color: white;}
-.bottomtext {color: #93AEBE; text-align: right; position: fixed; right: 10pt; bottom: 10pt; z-index: 100}
-.left .toolbar-button--quiet {color: white;}
-.right .favorites, .right .recents, .right .search {height: 25px; width: 25px; background-size: cover; position: absolute; margin: auto; top: 0; bottom: 0;}
-.right .favorites {background-image: url("../images/favorites.png"); right: 10px;}
-.right .recents {background-image: url("../images/recents.png"); right: 45px;}
-.right .search {background-image: url("../images/search.png"); right: 80px;}
+.page__background{background-color:#fff}.content .title,.content table{font-family:"Trebuchet MS",Helvetica,sans-serif;white-space:prewrap;word-wrap:break-word}.content .level-1,.content .level-2,.content .level-3,.content .level-4,.content table{margin-left:8pt;font-weight:normal;font-family:Nimbus Sans Cond}.content table{font-size:12pt}.content .row{font-size:12pt;width:100%;clear:both;margin:15pt 0;display:table}.content .left{float:left;text-align:right;width:30%}.content .right{float:left;width:70%}.content .title{font-weight:bold;font-size:17pt}.content .title-2{margin-top:3%;font-size:13pt}.content .level-1{font-size:16pt;margin-top:3%;margin-left:0;color:#47738d;}.content .level-1 ::before{content:"+\00A0"}.content .level-2{font-size:14pt;color:#619dc0;}.content .level-2 ::before{content:"+\00A0"}.content .level-3{font-size:12pt;}.content .level-3 ::before{content:"\2002\+\00A0+\00A0"}.content .level-4{font-size:12pt}.content .one-half{width:40%;float:left;margin-left:5%;padding-right:2.5%;margin-right:2.5%;white-space:pre-wrap;margin-top:4%}.content .border-right{border-right:1px solid #000}.topbar{background-color:#192832;}.topbar .navigation-bar__title{color:#fff}.bottomtext{color:#93aebe;text-align:right;position:fixed;right:10pt;bottom:10pt;z-index:100}.left .toolbar-button--quiet{color:#fff}.left .right .favorites,.left .right .recents,.left .right .search{height:25pt;width:25pt;background-size:cover;position:absolute;margin:auto;top:0;bottom:0}.left .right .favorites{background-image:url("../images/favorites.png");right:10px}.left .right .recents{background-image:url("../images/recents.png");right:45px}.left .right .search{background-image:url("../images/search.png");right:80px}
