modified expandable styling

--- a/app/styles/style.styl
+++ b/app/styles/style.styl
@@ -11,6 +11,8 @@
   font-weight bold
 .page__background
   background-color white
+.expandable-content.content
+  line-height 20pt
 .content
   width 95%
   margin 10pt auto 10pt auto
