before messing with tables

--- a/app/index.jade
+++ b/app/index.jade
@@ -25,6 +25,8 @@ html(lang='en', ng-app='fmCases')
       include views/content.jade
     script(type="text/ons-template", id="navigation.html")
       include views/navigation.jade
+    script(type="text/ons-template", id="search.html")
+      include views/search.jade
 
   body(ng-controller='RootCtrl')
 
