--- a/app/styles/style.styl
+++ b/app/styles/style.styl
@@ -128,6 +128,21 @@ ons-list ons-list-item.list__item
   .search
     background-image url("../images/search.png")
     right 55pt
+.search-bar
+  width 100%
+  border-top none
+  border-right none
+  border-left none
+  font-family Nimbus Sans Cond
+  font-size 16pt
+  border-bottom 1px solid lightgray
+  height 30pt
+  line-height 34pt
+  text-indent 6pt
+  color gray
+  resize none
+.search-progress
+  color gray
 .logo
   background-repeat no-repeat
   height 230pt
