--- a/app/views/includes/topbar.jade
+++ b/app/views/includes/topbar.jade
@@ -5,4 +5,4 @@ ons-toolbar.topbar
   .right
     .favorites(ng-tap="pushFavorites()")
     .recents(ng-tap="pushRecents()")
-    .search
+    .search(ng-tap="pushSearch()")
