added search and fixes

--- a/app/styles/style.styl
+++ b/app/styles/style.styl
@@ -22,6 +22,10 @@
     word-wrap: break-word
   table
     font-size 12pt
+    th
+      text-align left
+    td
+      padding-top 7pt
   .row
     font-size 12pt
     width 100%
