search preview text working

--- a/app/styles/style.styl
+++ b/app/styles/style.styl
@@ -13,6 +13,13 @@
   background-color white
 .expandable-content.content
   line-height 20pt
+.detail-content.content
+  margin -6px 0 0 0
+  line-height normal
+  color #B2B2B2
+  font-size 18px
+  padding 0 0 9px 0
+                    
 .content
   width 95%
   margin 10pt auto 10pt auto
