--- a/app/styles/style.styl
+++ b/app/styles/style.styl
@@ -138,7 +138,7 @@ ons-list ons-list-item.list__item
     right 33pt
   .search
     background-image url("../images/search.png")
-    right 55pt
+    right 55pt 
 .search-bar
   width 100%
   border-top none
@@ -165,7 +165,7 @@ ons-list ons-list-item.list__item
 .start-button
   margin-left auto
   margin-right auto
-  width 150pt
+  width 180pt
   height 35pt
   line-height 35pt
   font-family Nimbus Sans
@@ -175,3 +175,16 @@ ons-list ons-list-item.list__item
   font-size 19pt
   background-color #209CEF
   border-radius 5pt
+.search-bar-main
+  margin-left auto
+  margin-right auto
+  margin-bottom 15pt
+  width 175pt
+  font-family Nimbus Sans Cond
+  font-size 16pt
+  border 1px solid lightgray  
+  line-height 34pt
+  text-indent 6pt
+  color gray
+  resize none
+  display block  
