--- a/app/views/search.jade
+++ b/app/views/search.jade
@@ -1,7 +1,7 @@
 include includes/topbar.jade
 
 ons-list
-  textarea.search-bar(rows="1", placeholder="Search...", ng-model="searchWords", ng-change="search(searchWords)")
+  textarea.search-bar(rows="1", placeholder="Search...", ng-model="searchWords", ng-change="search(searchWords)", autofocus)
   ons-list-item.search-progress(ng-hide='progressText') Please type a search to begin
   ons-list-item.search-progress(ng-show='progressText') {{progressText}}
   ons-list-item(ng-repeat="item in searchResults", modifier="tappable", ng-tap="itemTapped(item)", ng-press="itemPressed(item)", ng-show="searchResults") {{item.title}}
