changes to search and coloring

--- a/app/styles/style.styl
+++ b/app/styles/style.styl
@@ -153,6 +153,8 @@ ons-list ons-list-item.list__item
   color gray
   resize none
 .search-progress
+  margin-top -4px
+  background-color #efefef
   color gray
 .logo
   background-repeat no-repeat
